docs: add comprehensive professional documentation
- Add complete project documentation with README, API docs, and guides
- Create CHANGELOG.md with version history and features
- Add CONTRIBUTING.md with development guidelines and standards
- Implement SECURITY.md with security policies and best practices
- Create comprehensive API documentation in docs/API.md
- Add environment configuration template (.env.example)
- Implement automated setup scripts for Linux/macOS and Windows
- Add production-ready Dockerfile with multi-stage builds
- Create docker-compose.prod.yml for production deployment
- Add GitHub Actions CI/CD pipeline configuration
- Update package.json with complete project metadata
- Document all API endpoints, entities, and relationships
- Include examples in multiple programming languages
- Add troubleshooting guides and deployment instructions

Features documented:
- Complete CRUD operations for all entities
- Product management with image upload
- Order management system with status tracking
- Client and delivery person (cadete) management
- Payment processing with MercadoPago integration
- Email notifications with HTML templates
- File upload handling for product images
- Swagger/OpenAPI automatic documentation

--- a/package.json
+++ b/package.json
@@ -1,10 +1,30 @@
 {
-  "name": "project-delivery-server",
+  "name": "fastdelivery-api",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "FastDelivery API - Sistema completo de gestión para servicios de delivery desarrollado con NestJS, TypeScript, MySQL y Docker",
+  "author": "GuillermoCruz27 <guillermo.cruz@email.com>",
   "private": true,
   "license": "UNLICENSED",
+  "keywords": [
+    "nestjs",
+    "typescript",
+    "api",
+    "delivery",
+    "mysql",
+    "docker",
+    "swagger",
+    "typeorm",
+    "rest",
+    "backend"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/GuillermoCruz27/Project-Delivery-Server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/GuillermoCruz27/Project-Delivery-Server/issues"
+  },
+  "homepage": "https://github.com/GuillermoCruz27/Project-Delivery-Server#readme",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
